# agentic-ai-course

./: README.md
lesson-01-hello-agent/: chatbot.py  pyproject.toml  stage_a_bare.py  stage_b_conversation.py
lesson-02-weather-agent/: README.md  pyproject.toml  stage_a_tool_call.py  weather_agent.py
lesson-03-translation-agent/: input_english.txt  pyproject.toml  translation_agent.py
lesson-04-streaming/: index.html  main.py  pyproject.toml
lesson-06-memory/: .gitignore  memory_agent.py  pyproject.toml
lesson-07-github-mcp/: .gitignore  github_agent.py  github_mcp_server.py  pyproject.toml
